src/scss/backend/pages/reports.scss
.reports-page {
  height: 100%;
}

.reports-page .drawer-frame {
  z-index: 2;
}

.reports-page .chart-container {
  height: auto;
  background-color: #fff;
  border-top: 1px solid #e9e9e9;
  padding: 10px 20px 20px;
}

.report-summary {
  color: #363636;
  font-size: 16px;
  line-height: 28px;
}

.report-summary-number-item {
  display: inline-block;
  margin-right: 60px;
  position: relative;
}

.report-summary-number-item>div {
  display: inline-block;
}

.report-summary-number-item>div:first-child {
  font-size: 42px;
  line-height: 80px;
}

.report-summary-number-item .report-tooltip-info {
  position: relative;
  top: 3px;
}

.report-summary-control-rows {
  font-size: 0;
  position: relative;
}

.report-summary-control-row {
  margin-right: 41px;
  position: relative;
  white-space: nowrap;
}

.report-summary-control-row:last-child {
  margin-right: 0;
}

.report-summary-control-row+.report-summary-control-row:after {
  background: #ccc;
  bottom: 0;
  content: '';
  height: 30px;
  margin-left: 20px;
  margin-right: 20px;
  position: absolute;
  right: 100%;
  width: 1px;
}

.report-summary-filter {
  display: inline-block;
  position: relative;
  vertical-align: bottom;
}

.report-summary-filter .dropdown {
  width: 190px;
}

.report-summary-filter-label {
  color: #888;
  font-size: 12px;
  font-weight: 500;
  height: 21px;
  line-height: 14px;
  padding-top: 7px;
}

.report-summary-filter-content {
  height: 30px;
  line-height: 30px;
  vertical-align: bottom;
}

.report-summary-filter-content>* {
  vertical-align: middle;
}

.report-summary-filter:not(:last-child) {
  margin-right: 41px;
}

.report-summary-filter:not(:last-child):after {
  background: #ccc;
  bottom: 0;
  content: '';
  height: 30px;
  left: 100%;
  margin-left: 20px;
  margin-right: 20px;
  position: absolute;
  width: 1px;
}

.report-summary-filter .list-filter-selector {
  border-bottom: 1px solid #ccc;
  display: inline-block;
  position: relative;
}

.report-summary-filter .list-filter-selector:focus {
  border-color: #0D94F6;
  box-shadow: inset 0 -2px 0 #0D94F6;
  outline: 0;
}

.report-summary-filter .list-filter-selector .option-list {
  max-height: 220px;
}

.report-summary-filter .list-filter-selector-selected {
  color: #363636;
  cursor: pointer;
  font-size: 13px;
  font-weight: 400;
  height: 28px;
  line-height: 24px;
  padding: 0 24px 0 0;
  position: relative;
  width: 100%;
}

.report-summary-filter .list-filter-selector-indicator {
  color: #888;
  font-size: 16px;
  position: absolute;
  right: 8px;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
}

.report-summary-filter .list-filter-selector-options {
  border-radius: 2px;
  left: -20px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  right: -20px;
  top: -8px;
  z-index: 1;
  background-color: #fff;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 1px 6px rgba(0,0,0,0.12);
  min-width: 300px;
  max-width: 500px;
}

.report-table-component .ember-table-body-container .ember-table-table-row.ember-table-selected {
  background-color: #2196f3;
}

.report-table-component .ember-table-table-row.ember-table-last-row {
  cursor: default !important;
  background-color: #fff !important;
}

.report-table-component .ember-table-header-cell.table-header-cell-sortable,
.report-table-component .ember-table-right-table-block .ember-table-header-cell.table-header-cell {
  cursor: default;
}

.report-table-component.report-table-component-activity .ember-table-table-row {
  cursor: default;
}

.report-table-component.report-table-component-activity .ember-table-body-container .ember-table-table-row.ember-table-hover {
  background: #fff;
}

